task 1 :D I did it, I am so cool and awesome

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -34,47 +34,8 @@
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
-<!--
-		<script type="application/javascript">
-			$(document).ready(function() {
 
-				function addQuotes(id, pic, name, title, text) {
-					$("carousel-inner:nth-of-type(1)").append(`
-							<div class="carousel-item">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="${pic}"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic ${id}"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">${text}</p>
-                      <h4 class="text-white font-weight-bold">${name}</h4>
-                      <span class="text-white">${title}</span>
-                    </div>
-                  </div>
-                </div>
-              </div>`);
-				}
-
-				function getQuotes() {
-					$("#not-loader").hide();
-					$.ajax({url: "https://smileschool-api.hbtn.info/quotes", type: "GET", dataType: "jsonp", success: function(data) {
-							data.forEach(function(quote) {
-								addQuotes(quote.id, quote.pic_url, quote.name, quote.title, quote.text);
-							});
-							$("#loader").hide();
-							$("#not-loader").show();
-						}, error: function() { $("#loader").replaceWith('<h1 style="margin: auto; color: white;">ERROR</h1>'); }
-					});
-				}
-
-				getQuotes();
-			});
-		</script> -->
+    <script src="1-script.js"></script>
 
     <link
       rel="stylesheet"
@@ -196,73 +157,7 @@
             class="carousel slide"
             data-ride="carousel"
           >
-            <div class="carousel-inner">
-              <!-- <div class="carousel-item active">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="images/profile_5.jpg"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic 1"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">
-                        « Those tutorials are concise and go straight to the
-                        point. I can't think of a better place to learn smiling.
-                        And it's so fun!
-                      </p>
-                      <h4 class="text-white font-weight-bold">Person Name</h4>
-                      <span class="text-white">weather presenter</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="images/profile_5.jpg"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic 1"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">
-                        « Those tutorials are concise and go straight to the
-                        point. I can't think of a better place to learn smiling.
-                        And it's so fun!
-                      </p>
-                      <h4 class="text-white font-weight-bold">Person Name</h4>
-                      <span class="text-white">weather presenter</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="images/profile_5.jpg"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic 1"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">
-                        « Those tutorials are concise and go straight to the
-                        point. I can't think of a better place to learn smiling.
-                        And it's so fun!
-                      </p>
-                      <h4 class="text-white font-weight-bold">Person Name</h4>
-                      <span class="text-white">weather presenter</span>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
+            <div class="carousel-inner" id="carousel-inner-quotes">
             </div>
             <a
               class="carousel-control-prev arrow-left"
@@ -2127,48 +2022,5 @@
       </div>
     </footer>
 <!--  END OF FOOTER  -->
-
-<!--  SCRIPT  -->
-    <script type="application/javascript">
-      $(document).ready(function() {
-
-        function addQuotes(id, pic, name, title, text) {
-          $("carousel-inner:nth-of-type(1)").append(`
-              <div class="carousel-item">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="${pic}"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic ${id}"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">${text}</p>
-                      <h4 class="text-white font-weight-bold">${name}</h4>
-                      <span class="text-white">${title}</span>
-                    </div>
-                  </div>
-                </div>
-              </div>`);
-        }
-
-        function getQuotes() {
-          $("#not-loader").hide();
-          $.ajax({url: "https://smileschool-api.hbtn.info/quotes", type: "GET", dataType: "jsonp", success: function(data) {
-              data.forEach(function(item) {
-                addQuotes(item.id, item.pic_url, item.name, item.title, item.text);
-              });
-              $("#loader").hide();
-              $("#not-loader").show();
-            }, error: function() { $("#loader").replaceWith('<h1 style="margin: auto; color: white;">ERROR</h1>'); }
-          });
-        }
-
-        getQuotes();
-      });
-    </script>
-<!--  END OF SCRIPT  -->
   </body>
 </html>
