task 5, all except keyword search works, console.logs aren't deleted yet :)

--- a/courses.html
+++ b/courses.html
@@ -208,9 +208,10 @@
       <section class="section results">
         <div class="container" id="results-section">
           <div class="section-title">
-            <span class="text-muted video-count" id="numOfVideos">11 videos</span>
+            <span class="text-muted video-count" id="numOfVideos">0 videos</span>
           </div>
 					<div class="loader" id="loader"></div>
+          <div id="video-results"></div>
         </div>
       </section>
 <!--  END OF RESULTS SECTION  -->
